--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ body {
 
 .icon {
   display: flex;
-justify-content: center;
-align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-icon-envelope {
@@ -151,7 +151,7 @@ align-items: center;
 }
 
 .menu-item-six:hover,
-.menu-item-six:focus  {
+.menu-item-six:focus {
   color: var(--item-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -217,9 +217,9 @@ a:link {
 
 .footer-name:hover .footer-menu-color,
 .footer-name:focus .footer-menu-color {
- color: var(--link-color);
- transition-duration: 250ms;
- transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--link-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-menu-color {
@@ -350,29 +350,28 @@ a.footer-contact {
 }
 
 .fieldset-footer-label {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #FFFFFF;
-display: block;
-margin-bottom: 20px;
-margin-top: 10px;
-
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  display: block;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .fieldset-footer-input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-border-radius: 4px;
-background-color: transparent;
-outline: none;
-margin-right: 12px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  outline: none;
+  margin-right: 12px;
 }
 
 .fieldset-footer-input:focus {
@@ -383,41 +382,40 @@ margin-right: 12px;
 
 .fieldset-footer-input::placeholder {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 20px;
-display: flex;
-align-items: center;
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .fieldset-footer-button {
   background: var(--item-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-width: 200px;
-height: 50px;
-display: flex;
-justify-content: center;
-margin: auto;
-cursor: pointer;
-margin-top: 46px;
-border: none;
-display: flex;
-align-items: center;
-position: relative;
-
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  cursor: pointer;
+  margin-top: 46px;
+  border: none;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .fieldset-footer-button-push {
   display: flex;
-justify-content: center;
-margin: auto;
-color: white;
-position: absolute;
-left: 40px;
+  justify-content: center;
+  margin: auto;
+  color: white;
+  position: absolute;
+  left: 40px;
 }
 
 .fieldset-footer-icon {
@@ -514,8 +512,7 @@ nav .menu-color {
 
 .btn-hover {
   border: none;
-  background: #F5F4FA;
-
+  background: #f5f4fa;
 }
 
 .btn-hover:hover,
@@ -578,9 +575,9 @@ button[type='button'] {
 
 .menu-item-one:hover .menu-color,
 .menu-item-one:focus .menu-color {
- color: var(--link-color);
- transition-duration: 250ms;
- transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--link-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-color:hover,
@@ -604,13 +601,13 @@ button[type='button'] {
 }
 
 .menu-item-two::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 58px;
   height: 4px;
   bottom: 32px;
   top: 78px;
-  background: #2196F3;
+  background: #2196f3;
   border-radius: 2px;
   display: block;
 }
@@ -628,15 +625,15 @@ button[type='button'] {
 }
 
 .menu-item-thirty-three::after {
-content: "";
-position: absolute;
-width: 58px;
-height: 4px;
-bottom: 32px;
-top: 78px;
-background: #2196F3;
-border-radius: 2px;
-display: block;
+  content: '';
+  position: absolute;
+  width: 58px;
+  height: 4px;
+  bottom: 32px;
+  top: 78px;
+  background: #2196f3;
+  border-radius: 2px;
+  display: block;
 }
 
 .menu-item-four {
@@ -697,7 +694,7 @@ display: block;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8));
   bottom: 0;
   width: 100%;
@@ -739,21 +736,20 @@ display: block;
   position: absolute;
   width: 100%;
   height: 100%;
-
 }
 
 .picture-portfolio-overlay-text {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-letter-spacing: 0.03em;
-color: #ffffff;
-padding-top: 49px;
-padding-bottom: 49px;
-padding-left: 24px;
-padding-right: 45px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding-top: 49px;
+  padding-bottom: 49px;
+  padding-left: 24px;
+  padding-right: 45px;
 }
 
 .picture-portfolio-box:hover .picture-portfolio-overlay {
@@ -762,7 +758,7 @@ padding-right: 45px;
   background: rgba(33, 150, 243, 0.9);
   height: 101%;
   width: 101%;
-  }
+}
 
 .picture-portfolio-title {
   font-family: 'Roboto';
@@ -998,42 +994,43 @@ li > .name-description {
 }
 
 .modal {
-width: 528px;
-height: 581px;
-background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
-margin: auto;
-display: flex;
-position: relative;
-justify-content: center;
+  width: 528px;
+  height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin: auto;
+  display: flex;
+  position: relative;
+  justify-content: center;
 }
 
 .modal-close-button {
-cursor: pointer;
-width: 30px;
-height: 30px;
-border-radius: 50%;
-background: #FFFFFF;
-border: 1px solid rgba(0, 0, 0, 0.1);
-position: absolute;
-right: 8px;
-top: 8px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  right: 8px;
+  top: 8px;
 }
 
 .modal-box-title {
-margin-top: 40px;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 20px;
-line-height: 23px;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--brand-color);
-margin-bottom: 30px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--brand-color);
+  margin-bottom: 30px;
 }
 
 .fieldset {
@@ -1052,17 +1049,17 @@ margin-bottom: 30px;
 
 .modal-label {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-letter-spacing: 0.01em;
-color: var(--link-color);
-margin-left: 17px;
-margin-bottom: 4px;
-position: absolute;
-top: -20px;
-left: -15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--link-color);
+  margin-left: 17px;
+  margin-bottom: 4px;
+  position: absolute;
+  top: -20px;
+  left: -15px;
 }
 
 .modal-form .modal-box-name-size {
@@ -1076,7 +1073,7 @@ left: -15px;
   width: 12px;
   height: 12px;
   fill: var(--brand-color);
-  position: absolute; 
+  position: absolute;
   left: 10px;
   display: block;
 }
@@ -1085,7 +1082,6 @@ left: -15px;
   border-color: var(--item-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .fieldset:has(.modal-box-name-size:focus) .modal-name-icon {
@@ -1118,28 +1114,28 @@ left: -15px;
   width: 416px;
   height: 96px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
-resize: none;
-outline: none;
-border: none;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-letter-spacing: 0.01em;
+  border-radius: 4px;
+  resize: none;
+  outline: none;
+  border: none;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
 }
 
 ::placeholder {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-letter-spacing: 0.01em;
-padding-left: 16px;
-padding-top: 12px;
-color: rgba(117, 117, 117, 0.5);
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  /* padding-left: 16px;
+padding-top: 12px; */
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .fieldset-submit {
@@ -1164,7 +1160,7 @@ color: rgba(117, 117, 117, 0.5);
   right: -0.1px;
   bottom: 3.5px;
   border-radius: 2px;
-} 
+}
 
 .modal-submit-checkbox .modal-submit-icon {
   fill: white;
@@ -1178,39 +1174,39 @@ input:checked + .modal-submit-checkbox .modal-submit-icon {
 
 .modal-submit-text {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.03em;
-color: var(--link-color);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--link-color);
 }
 
 a.modal-submit-term {
-color: var(--item-color);
-text-decoration: underline;
-cursor: pointer;
+  color: var(--item-color);
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .modal-submit-button {
   background: var(--item-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-width: 200px;
-height: 50px;
-display: flex;
-justify-content: center;
-margin: auto;
-cursor: pointer;
-margin-top: 30px;
-border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  cursor: pointer;
+  margin-top: 30px;
+  border: none;
 }
 
 .modal-submit-button-push {
   display: flex;
-justify-content: center;
-margin: auto;
-color: white;
+  justify-content: center;
+  margin: auto;
+  color: white;
 }
 
 .modal-submit-button:hover,
@@ -1219,7 +1215,3 @@ color: white;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-
- 
