added padding to footer input

--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,7 @@ a.footer-contact {
   background-color: transparent;
   outline: none;
   margin-right: 12px;
+  padding-left: 16px;
 }
 
 .fieldset-footer-input:focus {
